test/badinheritancetree.cl.ref.errors
"./badinheritancetree.cl", line 5: syntax error at or near CLASS
Compilation halted due to lex and parse errors
parser returned error code: 1
