test/badinheritancetree.cl
Class C inherits DNE {

}

Class A inherits B {

}

Class B inherits A {

}